--- a/timeline/package.json
+++ b/timeline/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^4.5.0",
     "core-js": "^3.6.4",
     "jquery": "^3.5.1",
+    "loadsh": "0.0.4",
     "vis-timeline": "^7.3.5",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6"
