--- a/timeline/package.json
+++ b/timeline/package.json
@@ -11,9 +11,11 @@
     "bootstrap": "^4.5.0",
     "core-js": "^3.6.4",
     "dompurify": "^2.0.11",
+    "graphql-query-builder": "^1.0.7",
     "jquery": "^3.5.1",
     "loadsh": "0.0.4",
     "marked": "^1.1.0",
+    "uuid": "^8.1.0",
     "vis-timeline": "^7.3.5",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6"
